Project/Frontend_todo/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-dep
  namespace: project
spec:
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      containers:
      - name: project
        image: PROJECT/FRONTEND
        volumeMounts: 
          - name: image-cache
            mountPath: /shared
      volumes:
        - name: image-cache
          persistentVolumeClaim:
            claimName: project-pvc
