Project/Frontend_todo/manifests/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: project-svc
spec:
  type: ClusterIP
  selector:
    app: project
  ports: 
    - port: 1234
      targetPort: 8000
      protocol: TCP
